--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,28 @@
             <artifactId>tomp2p-all</artifactId>
             <version>5.0-Beta8</version>
         </dependency>
+        <dependency>
+            <groupId>org.clapper</groupId>
+            <artifactId>javautil</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.9</version>
+        </dependency>
     </dependencies>
     <name>PilaCoin</name>
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.2.1</version>
+            <configuration>
+                <mainClass>br.ufsm.csi.seguranca.Main</mainClass>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
